# Personalized-AI-Tutor

./: .dockerignore  .gitignore  README.md  REMAINING_TASK_SPLIT.md  docker-compose.yml  render.yaml  requirements.txt  tutor_session_and_chat_history3.py
ai-core/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
ai-core/ai-core/: README.md
ai-core/core_engine/: __init__.py
ai-core/scripts/: smoke_test_question.py
ai_core/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
ai_core/scripts/: smoke_test_question.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/core/: ai_core_client.py  auth.py  config.py  database.py  internal_service_auth.py  security.py  telemetry.py
backend/endpoints/: admin_curriculum.py  admin_governance.py  auth.py  course_learning.py  dashboard_learning.py  database_setup.sql  diagnostic.py  graph_learning.py  internal_graph.py  internal_postgres.py  internal_postgres_service.py  internal_rag.py  learning_path.py  lessons.py  mastery.py  metadata.py  quizzes.py  student_learning_activity.py  students.py  system.py  teachers.py  test.py  topics.py  tutor.py  tutor_session_and_chat_history.py  tutor_session_and_chat_history2.py  tutor_sessions.py  users.py
backend/models/: __init__.py  activity.py  base.py  class_enrollment.py  curriculum_ingestion_job.py  curriculum_topic_map.py  curriculum_version.py  diagnostic.py  diagnostic_attempt.py  governance_hallucination.py  internal_quiz_attempt.py  (+20 more)
(+713 files in other folders)
