[project]
name = "ai-core"
version = "0.1.0"
description = "MVP AI core engine for JSS-scoped personalized AI tutor."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "neo4j>=5.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
