[project]
name = "mastery-ai-backend"
version = "0.1.0"
description = "FastAPI backend for Mastery AI (MVP)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.0",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_default_fixture_loop_scope = "function"
